--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Scripts -->
     <script src="script.js" defer></script>
     
-    <title>Web Starter</title>
+    <title>Putting it All Together </title>
 </head>
 <body>
     
